<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/main_thread_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:textSize="16sp"
                android:layout_marginEnd="4dp"
                android:text="@string/main_thread"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/asynchronous_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:textSize="16sp"
                android:layout_marginEnd="4dp"
                android:text="@string/asynchronous" />

            <RadioButton
                android:id="@+id/coroutine_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:textSize="16sp"
                android:layout_marginEnd="4dp"
                android:text="@string/coroutines" />

            <RadioButton
                android:id="@+id/executor_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:textSize="16sp"
                android:layout_marginEnd="4dp"
                android:text="@string/executors" />
        </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:divider="@drawable/divider"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/view_all_cats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="6dp"
            android:background="@color/colorSecondary"
            android:orientation="horizontal"
            android:paddingStart="18dp"
            android:paddingTop="18dp"
            android:paddingEnd="18dp"
            android:paddingBottom="18dp">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:contentDescription="@string/view_all_cats"
                android:src="@drawable/ic_view_all_cats"
                android:tint="@color/colorWhite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:layout_gravity="center"
                android:text="@string/browse_through_collection"
                android:textColor="@color/colorWhite"
                android:layout_marginStart="6dp"
                android:textSize="15sp" />


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
